// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoMatch/> Component render component trying to reach <User/> component with no username 1`] = `
<div>
  <div
    class="sc-gsTCUz jjwlfv uk-animation-fade uk-padding-large"
  >
    <h3
      class="sc-bkzZxe cNxjiI"
    >
      No match for 
      <code
        class="sc-idOhPF dMTeBE"
      >
        /user/
      </code>
    </h3>
    <br />
    <a
      href="/"
    >
      <code
        class="sc-idOhPF dMTeBE"
      >
        Return to the main page
      </code>
    </a>
  </div>
</div>
`;

exports[`<NoMatch/> Component render component without route provided 1`] = `
<div>
  <div
    class="sc-gsTCUz jjwlfv uk-animation-fade uk-padding-large"
  >
    <h3
      class="sc-bkzZxe cNxjiI"
    >
      No match for 
      <code
        class="sc-idOhPF dMTeBE"
      >
        /
      </code>
    </h3>
    <br />
    <a
      href="/"
    >
      <code
        class="sc-idOhPF dMTeBE"
      >
        Return to the main page
      </code>
    </a>
  </div>
</div>
`;
